--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página en GitHub Pages</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>¡Hola, mundo! 🚀</h1>
-    <p>Bienvenido a mi página web en GitHub Pages.</p>
+    <header>
+        <h1>Bienvenido a Mi Página 🌍</h1>
+        <p>Explora el increíble mundo del desarrollo web.</p>
+    </header>
+
+    <section class="contenido">
+        <h2>Sobre esta página</h2>
+        <p>Este es un sitio de prueba alojado en <strong>GitHub Pages</strong>.</p>
+        <a href="https://github.com/jc2506111" class="boton">Ver mi GitHub</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 - Creado por JC</p>
+    </footer>
 </body>
 </html>
