--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #1e3c72, #2a5298);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
             color: white;
             text-align: center;
         }
         header {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.8);
             padding: 20px;
             border-radius: 10px;
             margin-bottom: 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
         }
         .product {
             position: relative;
@@ -25,16 +26,16 @@
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
             background: rgba(255, 255, 255, 0.1);
-            transition: transform 0.2s, background 0.3s;
+            transition: transform 0.3s, background 0.3s;
         }
         .product:hover {
-            transform: scale(1.05);
-            background: rgba(255, 255, 255, 0.2);
+            transform: scale(1.1);
+            background: rgba(255, 255, 255, 0.3);
         }
         .product .product-info {
             display: none;
             position: absolute;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.9);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
             padding: 10px;
             border-radius: 10px;
@@ -53,10 +54,24 @@
             opacity: 1;
         }
         .cart-container {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.8);
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+        }
+        .button {
+            background: #ff9800;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s, transform 0.2s;
+        }
+        .button:hover {
+            background: #e68900;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -73,7 +88,7 @@
             <img src="https://via.placeholder.com/150" alt="Producto 1">
             <h2>Producto 1</h2>
             <p>$10.00</p>
-            <button class="add-to-cart">Agregar al carrito</button>
+            <button class="button add-to-cart">Agregar al carrito</button>
             <ul class="product-info">
                 <li>Detalles del producto 1</li>
                 <li>Material: Algodón</li>
@@ -84,7 +99,7 @@
             <img src="https://via.placeholder.com/150" alt="Producto 2">
             <h2>Producto 2</h2>
             <p>$15.00</p>
-            <button class="add-to-cart">Agregar al carrito</button>
+            <button class="button add-to-cart">Agregar al carrito</button>
             <ul class="product-info">
                 <li>Detalles del producto 2</li>
                 <li>Material: Cuero</li>
@@ -95,7 +110,7 @@
             <img src="https://via.placeholder.com/150" alt="Producto 3">
             <h2>Producto 3</h2>
             <p>$20.00</p>
-            <button class="add-to-cart">Agregar al carrito</button>
+            <button class="button add-to-cart">Agregar al carrito</button>
             <ul class="product-info">
                 <li>Detalles del producto 3</li>
                 <li>Material: Plástico</li>
