--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
             background: #009624;
             transform: scale(1.1);
         }
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .product {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+        }
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -88,22 +104,34 @@
     
         <section id="shop" class="hidden">
             <div class="products">
-                <div class="product" data-id="1" data-name="Producto 1" data-price="10">
-                    <img src="https://via.placeholder.com/150" alt="Producto 1">
-                    <h2>Producto 1</h2>
-                    <p>$10.00</p>
+                <div class="product" data-id="1" data-name="Juego de Acción 1" data-price="30">
+                    <img src="https://via.placeholder.com/150" alt="Juego de Acción 1">
+                    <h2>Juego de Acción 1</h2>
+                    <p>$30.00</p>
                     <button class="button add-to-cart">Agregar al carrito</button>
                 </div>
-                <div class="product" data-id="2" data-name="Producto 2" data-price="15">
-                    <img src="https://via.placeholder.com/150" alt="Producto 2">
-                    <h2>Producto 2</h2>
-                    <p>$15.00</p>
+                <div class="product" data-id="2" data-name="Juego de Estrategia 1" data-price="25">
+                    <img src="https://via.placeholder.com/150" alt="Juego de Estrategia 1">
+                    <h2>Juego de Estrategia 1</h2>
+                    <p>$25.00</p>
                     <button class="button add-to-cart">Agregar al carrito</button>
                 </div>
-                <div class="product" data-id="3" data-name="Producto 3" data-price="20">
-                    <img src="https://via.placeholder.com/150" alt="Producto 3">
-                    <h2>Producto 3</h2>
+                <div class="product" data-id="3" data-name="Juego de Misterio 1" data-price="20">
+                    <img src="https://via.placeholder.com/150" alt="Juego de Misterio 1">
+                    <h2>Juego de Misterio 1</h2>
                     <p>$20.00</p>
+                    <button class="button add-to-cart">Agregar al carrito</button>
+                </div>
+                <div class="product" data-id="4" data-name="Juego de Acción 2" data-price="35">
+                    <img src="https://via.placeholder.com/150" alt="Juego de Acción 2">
+                    <h2>Juego de Acción 2</h2>
+                    <p>$35.00</p>
+                    <button class="button add-to-cart">Agregar al carrito</button>
+                </div>
+                <div class="product" data-id="5" data-name="Juego de Estrategia 2" data-price="28">
+                    <img src="https://via.placeholder.com/150" alt="Juego de Estrategia 2">
+                    <h2>Juego de Estrategia 2</h2>
+                    <p>$28.00</p>
                     <button class="button add-to-cart">Agregar al carrito</button>
                 </div>
             </div>
@@ -124,3 +152,4 @@
     </script>
 </body>
 </html>
+
