--- a/layout.html
+++ b/layout.html
@@ -10,7 +10,6 @@
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
             color: white;
-            text-align: center;
             margin: 0;
             padding: 0;
         }
@@ -22,11 +21,21 @@
             top: 0;
             left: 0;
             z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .menu {
             display: flex;
-            justify-content: center;
             gap: 20px;
+        }
+        .menu-left {
+            display: flex;
+            gap: 20px;
+            margin-left: 20px;
+        }
+        .menu-right {
+            margin-right: 20px;
         }
         .menu a {
             background: #ff9800;
@@ -42,21 +51,26 @@
         }
         .container {
             padding-top: 100px;
+            text-align: center;
         }
         footer {
             background: rgba(0, 0, 0, 0.8);
             padding: 10px;
             margin-top: 20px;
-            position: relative;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
         <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="tienda.html">Juegos</a>
-            <a href="contacto.html">Contacto</a>
+            <div class="menu-left">
+                <a href="index.html">Inicio</a>
+                <a href="tienda.html">Juegos</a>
+            </div>
+            <div class="menu-right">
+                <a href="contacto.html">Contacto</a>
+            </div>
         </nav>
     </header>
     <div class="container">
