--- a/layout.html
+++ b/layout.html
@@ -27,7 +27,9 @@
         }
         .menu {
             display: flex;
-            gap: 20px;
+            justify-content: space-between;
+            width: 100%;
+            align-items: center;
         }
         .menu-left {
             display: flex;
@@ -82,3 +84,4 @@
     </footer>
 </body>
 </html>
+
