--- a/layout.html
+++ b/layout.html
@@ -25,19 +25,15 @@
             justify-content: space-between;
             align-items: center;
         }
-        .menu {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            align-items: center;
-        }
         .menu-left {
-            display: flex;
-            gap: 20px;
-            margin-left: 20px;
+            position: absolute;
+            left: 20px;
+            top: 20px;
         }
         .menu-right {
-            margin-right: 20px;
+            position: absolute;
+            right: 20px;
+            top: 20px;
         }
         .menu a {
             background: #ff9800;
@@ -46,6 +42,7 @@
             border-radius: 5px;
             text-decoration: none;
             transition: background 0.3s, transform 0.2s;
+            display: inline-block;
         }
         .menu a:hover {
             background: #e68900;
