--- a/layout.html
+++ b/layout.html
@@ -26,14 +26,14 @@
             align-items: center;
         }
         .menu-left {
-            position: absolute;
-            left: 20px;
-            top: 20px;
+            display: flex;
+            gap: 15px;
+            margin-left: 20px;
         }
         .menu-right {
-            position: absolute;
-            right: 20px;
-            top: 20px;
+            display: flex;
+            gap: 15px;
+            margin-right: 20px;
         }
         .menu a {
             background: #ff9800;
@@ -49,7 +49,7 @@
             transform: scale(1.1);
         }
         .container {
-            padding-top: 100px;
+            padding-top: 120px;
             text-align: center;
         }
         footer {
@@ -81,4 +81,3 @@
     </footer>
 </body>
 </html>
-
