--- a/layout.html
+++ b/layout.html
@@ -1,85 +1,158 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebInnovate</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - WebInnovate</title>
     <style>
+        /* Estilos generales */
         body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-            color: white;
             margin: 0;
             padding: 0;
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            overflow: hidden; /* Evita scroll innecesario */
         }
-        header {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
+
+        /* Contenedor del video */
+        .video-container {
             position: fixed;
-            width: 100%;
             top: 0;
             left: 0;
-            z-index: 1000;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+            /* Ajusta el video para que cubra toda la pantalla */
+            .video-container video {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+        /* Capa de opacidad para mejorar la visibilidad del texto */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 0;
+        }
+
+        /* Barra de navegación */
+        .navbar {
+            width: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
         }
+
         .menu-left {
             display: flex;
-            gap: 15px;
+            gap: 20px;
             margin-left: 20px;
         }
-        .menu-right {
-            display: flex;
-            gap: 15px;
-            margin-right: 20px;
-        }
-        .menu a {
-            background: #ff9800;
+
+        .navbar a {
             color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
             text-decoration: none;
-            transition: background 0.3s, transform 0.2s;
+            font-size: 18px;
+            padding: 10px;
+            transition: color 0.3s;
+        }
+
+            .navbar a:hover {
+                color: cyan;
+            }
+
+        /* Menú desplegable */
+        .dropdown {
+            position: relative;
             display: inline-block;
         }
-        .menu a:hover {
-            background: #e68900;
-            transform: scale(1.1);
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.9);
+            min-width: 150px;
+            box-shadow: 0px 0px 10px cyan;
+            z-index: 1;
         }
-        .container {
-            padding-top: 120px;
-            text-align: center;
+
+            .dropdown-content a {
+                color: white;
+                padding: 10px;
+                text-decoration: none;
+                display: block;
+                transition: background 0.3s;
+            }
+
+                .dropdown-content a:hover {
+                    background-color: cyan;
+                    color: black;
+                }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
-        footer {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            margin-top: 20px;
+
+        /* Contenido principal */
+        .content {
+            position: relative;
+            z-index: 1;
             text-align: center;
+            margin-top: 100px;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <div class="menu-left">
-                <a href="index.html">Inicio</a>
-                <a href="tienda.html">Juegos</a>
-            </div>
-            <div class="menu-right">
-                <a href="contacto.html">Contacto</a>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <h1>Bienvenido a WebInnovate</h1>
-        <p>Explora nuestra tienda con productos increíbles.</p>
+
+    <!-- Video de fondo -->
+    <div class="video-container">
+        <video autoplay loop muted>
+            <source src="https://www.videezy.com/download/11109" type="video/mp4">
+            Tu navegador no soporta videos HTML5.
+        </video>
     </div>
-    <footer>
-        <p>&copy; 2025 WebInnovate. Todos los derechos reservados.</p>
-    </footer>
+
+    <!-- Capa de opacidad -->
+    <div class="overlay"></div>
+
+    <!-- Menú de navegación -->
+    <nav class="navbar">
+        <div class="menu-left">
+            <a href="/">Inicio</a>
+            <div class="dropdown">
+                <a href="#">Juegos ▼</a>
+                <div class="dropdown-content">
+                    <a href="/Juegos/Accion">Acción</a>
+                    <a href="/Juegos/Aventura">Aventura</a>
+                    <a href="/Juegos/Estrategia">Estrategia</a>
+                </div>
+            </div>
+            <a href="/Home/Login">Iniciar Sesión</a>
+            <a href="/Home/Register">Registrarse</a>
+            <a href="/Home/Contacto">Contacto</a>
+        </div>
+    </nav>
+
+    <!-- Contenido principal -->
+    <div class="content">
+        @RenderBody()
+    </div>
+
 </body>
 </html>
-l>
 
