--- a/layout.html
+++ b/layout.html
@@ -8,14 +8,14 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            background: linear-gradient(to right, #141e30, #243b55);
             color: white;
             margin: 0;
             padding: 0;
         }
         header {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 15px 20px;
             position: fixed;
             width: 100%;
             top: 0;
@@ -25,35 +25,28 @@
             justify-content: space-between;
             align-items: center;
         }
-        .menu-left {
+        .menu {
             display: flex;
-            gap: 15px;
-            margin-left: 20px;
-        }
-        .menu-right {
-            display: flex;
-            gap: 15px;
-            margin-right: 20px;
+            gap: 20px;
         }
         .menu a {
             background: #ff9800;
             color: white;
-            padding: 10px 20px;
+            padding: 10px 15px;
             border-radius: 5px;
             text-decoration: none;
             transition: background 0.3s, transform 0.2s;
-            display: inline-block;
         }
         .menu a:hover {
             background: #e68900;
             transform: scale(1.1);
         }
         .container {
-            padding-top: 120px;
+            padding-top: 100px;
             text-align: center;
         }
         footer {
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.9);
             padding: 10px;
             margin-top: 20px;
             text-align: center;
@@ -63,18 +56,20 @@
 <body>
     <header>
         <nav class="menu">
-            <div class="menu-left">
+            <div>
                 <a href="index.html">Inicio</a>
                 <a href="juegos.html">Juegos</a>
-            </div>
-            <div class="menu-right">
                 <a href="contacto.html">Contacto</a>
+            </div>
+            <div>
+                <a href="login.html">Iniciar Sesión</a>
+                <a href="registro.html">Registrarse</a>
             </div>
         </nav>
     </header>
     <div class="container">
         <h1>Bienvenido a WebInnovate</h1>
-        <p>Explora nuestra tienda con productos increíbles.</p>
+        <p>Explora nuestra tienda con los mejores videojuegos.</p>
     </div>
     <footer>
         <p>&copy; 2025 WebInnovate. Todos los derechos reservados.</p>
