--- a/index.html
+++ b/index.html
@@ -3,72 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebInnovate</title>
+    <title>Datos en Vivo</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-            color: white;
-            text-align: center;
             margin: 0;
             padding: 0;
+            background-color: #f4f7fc;
+            color: #333;
         }
         header {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 0;
-            margin-bottom: 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+            background: #ffffff;
+            padding: 15px 5%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             position: fixed;
             width: 100%;
             top: 0;
-            left: 0;
             z-index: 1000;
         }
-        .menu {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
         .menu a {
-            background: #ff9800;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s, transform 0.2s;
             text-decoration: none;
+            color: #333;
+            margin: 0 15px;
+            font-weight: bold;
+            transition: color 0.3s;
         }
         .menu a:hover {
-            background: #e68900;
-            transform: scale(1.1);
+            color: #007bff;
         }
-        .container {
-            padding-top: 80px;
+        .hero {
+            background: linear-gradient(to right, #3b82f6, #06b6d4);
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+            margin-top: 60px;
+        }
+        .section {
+            padding: 50px 5%;
+            text-align: center;
+        }
+        .cta {
+            background: #3b82f6;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: inline-block;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+        .cta:hover {
+            background: #0056b3;
         }
         footer {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px;
+            background: #0f172a;
+            color: white;
+            text-align: center;
+            padding: 20px;
             margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-            position: relative;
         }
     </style>
 </head>
 <body>
     <header>
+        <h2>Pay</h2>
         <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="tienda.html">Juegos</a>
-            <a href="contacto.html">Contacto</a>
+            <a href="#">Inicio</a>
+            <a href="#">Sobre nosotros</a>
+            <a href="#">Contacto</a>
         </nav>
     </header>
-    <div class="container">
-        <h1>Bienvenido a WebInnovate</h1>
-        <p>Explora nuestra tienda con productos increíbles.</p>
+    <div class="hero">
+        <h1>Datos en vivo, fiables y rápidos</h1>
     </div>
+    <div class="section">
+        <h2>Datos en los que confiar</h2>
+        <p>01. Rápidos y ágiles</p>
+        <p>02. Rentables</p>
+        <p>03. Análisis en tiempo real</p>
+    </div>
+    <div class="section" style="background: #e0f2fe;">
+        <h2>Comprende mejor a tus clientes</h2>
+    </div>
+    <footer>
+        <p>&copy; 2025 Pay. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
+
