--- a/layout.html
+++ b/layout.html
@@ -1,47 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Colorido con Botones de Compra</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Bienvenido a Nuestra Tienda</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
+<header>
+    <h1>Mi Página Web</h1>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Nosotros</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
+</nav>
+
+<div class="container">
     <main>
         <section class="content">
-            <h2>Productos Destacados</h2>
-            <p>Descubre nuestros productos más populares. ¡No te los puedes perder!</p>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="Producto 1">
-                <h3>Producto 1</h3>
-                <p>Este es un producto muy popular. ¡Cómpralo ahora!</p>
-                <button class="buy-btn">Comprar ahora</button>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/200" alt="Producto 2">
-                <h3>Producto 2</h3>
-                <p>Otro producto increíble. ¡Haz tu compra ya!</p>
-                <button class="buy-btn">Comprar ahora</button>
-            </div>
+            <h2>Bienvenidos</h2>
+            <p>Contenido principal</p>
         </section>
+
         <aside>
             <h3>Noticias</h3>
-            <p>Últimas noticias sobre nuestros productos y ofertas especiales.</p>
+            <p>Últimas noticias</p>
         </aside>
     </main>
+
     <footer>
-        <p>&copy; 2025 Tienda en línea. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Mi Página Web. Todos los derechos reservados.</p>
     </footer>
-</body>
-</html>
+</div>
