--- a/layout.html
+++ b/layout.html
@@ -1,28 +1,59 @@
 <header>
-    <h1>Mi Página Web</h1>
+    <div class="logo">
+        <h1>Mi Tienda</h1>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
 </header>
-
-<nav>
-    <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
-    </ul>
-</nav>
 
 <div class="container">
     <main>
-        <section class="content">
-            <h2>Bienvenidos</h2>
-            <p>Contenido principal</p>
+        <section class="hero">
+            <h2>¡Ofertas Exclusivas! </h2>
+            <p>Productos con descuentos increíbles solo por tiempo limitado.</p>
+            <a href="#" class="cta-btn">¡Compra Ahora!</a>
         </section>
 
-        <aside>
-            <h3>Noticias</h3>
-            <p>Últimas noticias</p>
-        </aside>
+        <section class="products">
+            <h2>Productos Destacados</h2>
+            <div class="product-card">
+                <img src="https://via.placeholder.com/300" alt="Producto 1">
+                <h3>Producto 1</h3>
+                <p>Descripción del producto 1.</p>
+                <button class="buy-btn">Comprar</button>
+            </div>
+            <div class="product-card">
+                <img src="https://via.placeholder.com/300" alt="Producto 2">
+                <h3>Producto 2</h3>
+                <p>Descripción del producto 2.</p>
+                <button class="buy-btn">Comprar</button>
+            </div>
+            <div class="product-card">
+                <img src="https://via.placeholder.com/300" alt="Producto 3">
+                <h3>Producto 3</h3>
+                <p>Descripción del producto 3.</p>
+                <button class="buy-btn">Comprar</button>
+            </div>
+        </section>
     </main>
+
+    <aside>
+        <h3>Promociones Especiales</h3>
+        <p>¡No te pierdas nuestras ofertas limitadas! Consigue productos con hasta un 50% de descuento.</p>
+    </aside>
+</div>
+
+<footer>
+    <p>&copy; 2025 Mi Tienda. Todos los derechos reservados.</p>
+    <p>Redes sociales: Facebook | Instagram | Twitter</p>
+</footer>
+
 
     <footer>
         <p>&copy; 2025 Mi Página Web. Todos los derechos reservados.</p>
