--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Menú Superior -->
     <header>
         <div class="logo">
             <h1>Mi Tienda</h1>
@@ -21,10 +22,11 @@
         </nav>
     </header>
 
+    <!-- Contenido Principal -->
     <div class="container">
         <main>
             <section class="hero">
-                <h2>¡Ofertas Exclusivas! </h2>
+                <h2>¡Ofertas Exclusivas!</h2>
                 <p>Productos con descuentos increíbles solo por tiempo limitado.</p>
                 <a href="#" class="cta-btn">¡Compra Ahora!</a>
             </section>
@@ -58,9 +60,14 @@
         </aside>
     </div>
 
+    <!-- Barra Inferior -->
     <footer>
         <p>&copy; 2025 Mi Tienda. Todos los derechos reservados.</p>
         <p>Redes sociales: Facebook | Instagram | Twitter</p>
+    </footer>
+</body>
+</html>
+am | Twitter</p>
     </footer>
 </body>
 </html>
